--- a/FrozenCode.Note.UI/NoteUI/src/app/add-note/add-note.component.html
+++ b/FrozenCode.Note.UI/NoteUI/src/app/add-note/add-note.component.html
@@ -6,8 +6,8 @@
       <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">
         Title
       </label>
-      <input formControlName="Title" required  class="appearance-none block w-full bg-gray-200 text-gray-700 border border-red-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white" id="title" type="text" placeholder="title">
-     
+      <input formControlName="Title" required class="appearance-none block w-full bg-gray-200 text-gray-700 border border-red-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white" id="title" type="text" placeholder="title">
+
     </div>
     <div class="w-full md:w-1/2 px-3">
       <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-last-name">
@@ -28,6 +28,10 @@
   <button type="submit" [disabled]="!noteForm.valid">Submit</button>
 
 
+  <br />
+  <br />
+
 
 
 </form>
+<app-note-share noteId="{{noteId}}"></app-note-share>
