--- a/FrozenCode.Note.UI/NoteUI/src/app/tool-bar/tool-bar.component.html
+++ b/FrozenCode.Note.UI/NoteUI/src/app/tool-bar/tool-bar.component.html
@@ -7,19 +7,26 @@
       <span class="ml-3 text-xl">MyNotes</span>
     </a>
     <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
-      <a class="mr-5 hover:text-gray-900"  [routerLink]="'/add-note'">
-       <i class="fa fa-plus" aria-hidden="true"></i>
+      <a *ngIf="isLoggedIn()" class="mr-5 hover:text-gray-900" [routerLink]="'/add-note'">
+        <i class="fa fa-plus" aria-hidden="true"></i>
 
       </a>
-      <a class="mr-5 hover:text-gray-900" [routerLink]="'/list-notes'">Notes</a>
-      <a class="mr-5 hover:text-gray-900">Third Link</a>
-     
+      <a *ngIf="isLoggedIn()" class="mr-5 hover:text-gray-900" [routerLink]="'/list-notes'">Notes</a>
+      <a *ngIf="!isLoggedIn()" class="mr-5 hover:text-gray-900" [routerLink]="'/sign-up'">Sign Up</a>
+      <a *ngIf="!isLoggedIn()" class="mr-5 hover:text-gray-900" [routerLink]="'/sign-in'">Sign In</a>
+
+
     </nav>
-    <button class="inline-flex items-center bg-gray-200 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0">
-      Button
-      <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
-        <path d="M5 12h14M12 5l7 7-7 7"></path>
-      </svg>
-    </button>
+    <div *ngIf="isLoggedIn()" class="p-4 lg:w-1/2">
+      <div class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left">
+       <div class="flex-grow sm:pl-8">
+          <h2 class="title-font font-medium text-lg text-gray-900">User Name</h2>
+          <h3 class="text-gray-500 mb-3">Email</h3>
+          <button  class="mr-5 hover:text-gray-900" (click)="logOut()">Log Out</button>
+          
+        </div>
+      </div>
+    </div>
+
   </div>
 </header>
